# Raspberry-Pico-USB-Serial_BETA

./: LICENSE  README.md
Archive/: old_versions.txt
Archive/15_OCT_2024/lib_usb_cdc_serial/: USB_EP2_handlers.c  USB_buffer_control.c  USB_cdc_line_coding.c  USB_interrupts.c  USB_setup_control.c  (+1 more)
Archive/Original/: version.txt
USB_Serial_Demo/: CMakeLists.txt  main.c  stdio_tests.c
USB_Serial_Demo/include/: main.h  stdio_tests.h
USB_Serial_Demo/lib_usb_cdc_serial/: API_usb_serial.h  USB_cdc_line_control.c  USB_descriptor_device.c  USB_endpoints_pico.c  USB_error.c  USB_initialise.c  USB_queue_receive.c  USB_setup_device.c  USB_setup_packet.c  USB_setup_strings.c
USB_Serial_Demo_Debug/: CMakeLists.txt  main.c  stdio_tests.c
USB_Serial_Demo_Debug/lib_usb_cdc_serial_debug/: USB_endpoints_pico.c  USB_initialise.c  USB_queue_control.c  USB_queue_receive.c  USB_setup_descriptors.c  USB_setup_interface.c  USB_setup_type_class.c  USB_vcp.c
USB_Serial_Demo_Debug/lib_usb_cdc_serial_debug/include/: USB_EP1_handlers.h  USB_build_endpoints.h  USB_endpoints_host.h  USB_error.h  USB_setup_type_class.h  USB_uart_printf.h
documents/: functions.md  usb_enumeration.txt
lib_usb_cdc_serial/: API_usb_serial.c  API_usb_serial.h  CMakeLists.txt  USB_EP0_handlers.c  USB_EP1_handlers.c  USB_EP2_handlers.c  USB_buffer_completion.c  USB_buffer_control.c  USB_build_endpoints.c  USB_bus_reset.c  USB_com_port_framing.c  USB_com_port_signalling.c  USB_data_packet.c  USB_endpoint_control.c  USB_endpoints_host.c  USB_endpoints_pico.c  USB_initialise.c  USB_interrupts.c  USB_queue_builder.c  USB_queue_control.c  USB_queue_receive.c  USB_queue_runner.c  USB_queue_transmit.c  USB_set_configuration.c  USB_setup_address.c  USB_setup_class_cdc.c  USB_setup_descriptors.c  USB_setup_endpoint.c  USB_setup_interface.c  USB_setup_strings.c  USB_setup_type_class.c  USB_setup_type_standard.c  USB_sie_errors.c  USB_sie_status.c  USB_suspend_resume.c  USB_vcp.c
lib_usb_cdc_serial/include/: USB_EP0_handlers.h  USB_EP1_handlers.h  USB_EP2_handlers.h  USB_buffer_completion.h  USB_buffer_control.h  USB_build_endpoints.h  USB_bus_reset.h  USB_cdc_line_control.h  USB_com_port_framing.h  USB_com_port_signalling.h  USB_descriptor_config.h  USB_endpoint_control.h  USB_endpoint_struct.h  USB_endpoints_pico.h  USB_interrupts.h  USB_queue_builder.h  USB_queue_control.h  USB_queue_runner.h  USB_queue_transmit.h  USB_set_configuration.h  USB_setup_interface.h  USB_setup_packet.h  USB_suspend_resume.h  USB_vcp.h
lib_usb_cdc_serial_debug/: CMakeLists.txt  USB_EP0_handlers.c  USB_EP1_handlers.c  USB_EP2_handlers.c  USB_buffer_completion.c  USB_build_endpoints.c  USB_bus_reset.c  USB_cdc_line_coding.c  USB_com_port_framing.c  USB_com_port_signalling.c  USB_descriptor_config.c  USB_endpoints_host.c  USB_endpoints_pico.c  USB_interrupts.c  USB_queue_receive.c  USB_queue_transmit.c  USB_set_configuration.c  USB_setup_address.c  USB_setup_class_cdc.c  USB_setup_control.c  USB_setup_device.c  USB_setup_endpoint.c  USB_setup_packet.c  USB_setup_show.c  USB_sie_errors.c  USB_uart_printf.c
lib_usb_cdc_serial_debug/include/: USB_EP0_handlers.h  USB_EP1_handlers.h  USB_EP3_handlers.h  USB_cdc_line_control.h  USB_com_port_signalling.h  USB_data_packet.h  USB_debug_show.h  USB_descriptor_device.h  USB_endpoints_pico.h  USB_queue_receive.h  USB_setup_type_standard.h  USB_sie_errors.h  USB_uart_printf.h
(+64 files in other folders)
